--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
-<body background="https://www.google.com/search?client=firefox-b-d&tbm=isch&q=bugatti+chiron&chips=q:bugatti+chiron,g_1:black:w-QPCY1grWk%3D&usg=AI4_-kQRbyq3oOLSyz410nJDSK9YOK9-_A&sa=X&ved=0ahUKEwiW9qzJqZ7kAhWx73MBHfuTA_kQ4lYIMCgD#imgrc=72nAKAFTCx4kDM:">
-
+<body background="D:\Camera\IMG_20190603_230047_062.jpg>
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
