--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
-<body background="D:\Camera\IMG_20190603_230047_062.jpg>
+<body>
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
