--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>This is my first website. Thanks for visiting!</p>
-  <p> from-Ansh joshi</p>
+  <p> from-<mark>Ansh joshi</mark></p>
+  <p> Link to google
+    <a href="http://www.google.com" target="_blank">here</a>
+</p><br>
 
 </body>
 </html>
